# evm-token-indexer

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
docker/: indexer.dockerfile
prisma/: schema.prisma
prisma/migrations/20230729073441_init/: migration.sql
prisma/migrations/20230729080220_add_index/: migration.sql
prisma/migrations/20230729100730_init/: migration.sql
prisma/migrations/20230729111836_init/: migration.sql
prisma/migrations/20230729130138_add_table_states/: migration.sql
prisma/migrations/20230729133950_alter_states_table_unique_constraint/: migration.sql
prisma/migrations/20230729171804_alter_states_delete_useless_column/: migration.sql
prisma/migrations/20230730054701_alter_varchar_length/: migration.sql
prisma/migrations/20230730063051_alter_log_index_type/: migration.sql
prisma/migrations/20230730091810_init/: migration.sql
src/: address.rs  indexer.rs  main.rs  prisma.rs  util.rs
src/indexer/: logs.rs  mod.rs  tokens.rs
